# Ray-Tracer

./: CMakeLists.txt
Core/include/: PPM.h  Ray.h  main.h
Core/src/: PPM.cpp  Ray.cpp  main.cpp
